--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/fadly.nm?igsh=eWVpajV4N2luN21j" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
